openshift/04-triggers.yaml
# Route para exponer el EventListener a internet (necesario para el webhook de GitHub)
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: github-event-listener
  namespace: mi-namespace
spec:
  to:
    kind: Service
    name: el-github-event-listener
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
